# hci-gesture-control

./: .gitignore  CMakeLists.txt  README.md  build.cmd  cvui.h  gesture.h  main.cpp
docs/: Presentation.pptx
images/: algorithm1.drawio
include/: gesture.h  hci_control.h
src/: main.cpp  test.cpp
